# NucNetPy

./: .gitignore  BLOG_COVERAGE.md  CITATION.cff  CONVERSION_MAP.md  EXACT_NUMERICAL_IDENTITY.md  PURE_PYTHON_PORT_STATUS.md  README.md  REAL_JINA_FILES_UPDATE.md  REAL_XML_VALIDATION_REPORT.md  pyproject.toml
.github/workflows/: ci.yml
docs/: JINA_XML_WORKFLOW.md  PURE_PYTHON_PORT_STATUS.md  README.md  nucnetpy_real_xml_validation_summary.json
examples/: run_single_zone.py  use_nucnetpy.py
notebooks/: 00_installation_and_first_network.ipynb  01_species_zones_and_abundances.ipynb  02_xml_read_write_and_cli.ipynb  03_reaction_rates_flows_and_conservation.ipynb  04_one_zone_evolution.ipynb  05_nse_screening_and_weak_rates.ipynb  06_validation_and_regression_workflow.ipynb  07_using_jina_xml_database.ipynb  08_validate_real_jina_files.ipynb  README.md
notebooks/data/: toy_alpha_network.xml  toy_golden_python.csv  toy_weak_rates.txt
src/nucnetpy/: __init__.py  analysis.py  constants.py  core.py  coulomb.py  decay.py  detailed_balance.py  graph.py  hydro.py  mathutils.py  matrix_solver.py  network_limiter.py  neutrino.py  nse.py  qse.py  rate_modifiers.py  reactions.py  screening.py  solver.py  species.py  thermo.py  validation.py  weak.py
src/nucnetpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nucnetpy/cli/: __init__.py
src/nucnetpy/io/: __init__.py  hdf5.py  jina.py  text.py  xml.py
tests/: test_blog_workflows.py  test_core.py  test_cpp_ports.py  test_golden_identity.py  test_jina_xml.py  test_pure_python_ports.py  test_replacement_layers.py
tests/golden/: golden_network.xml  golden_weak_rates.txt  rates_reaclib.json  screening.json  trajectory.json  weak_rates.json  ydot.json
validation/: generate_golden.py  validate_real_jina_xml.py
