[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucnetpy"
version = "1.0.0a5"
description = "Pure-Python replacement package for NucNet Tools workflows"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Converted with ChatGPT"}]
license = {text = "Research/educational conversion; check original NucNet Tools license before redistribution."}
dependencies = ["numpy>=1.22", "scipy>=1.9"]

[project.optional-dependencies]
hdf5 = ["h5py>=3.8"]
solver = ["scipy>=1.9"]
plot = ["matplotlib>=3.6", "networkx>=2.8"]
dev = ["pytest>=7"]

[project.scripts]
nucnetpy = "nucnetpy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
